# dcc-ci-monitor-brightness-control

./: CMakeLists.txt  Readme.md  brightness_slider.manifest  brightness_slider.rc  resource.h
src/: brightness.cpp  brightness.h  main.cpp
